# pluginval

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGELIST.md  CMakeLists.txt  README.md  azure-pipelines.yml  pluginval.jucer
.github/workflows/: build.yaml  ccpp.yml
Source/: CommandLine.cpp  CommandLine.h  CommandLineTests.cpp  CommonTypes.h  CrashHandler.cpp  CrashHandler.h  JUnitListener.cpp  JUnitListener.h  JUnitReport.cpp  JUnitReport.h  JUnitWriter.cpp  JUnitWriter.h  Main.cpp  MainComponent.cpp  MainComponent.h  PluginTestResult.h  PluginTests.cpp  PluginTests.h  RTCheck.h  TestUtilities.cpp  TestUtilities.h  Validator.cpp  Validator.h
Source/tests/: BasicTests.cpp  BusTests.cpp  EditorTests.cpp  ExtremeTests.cpp  ParameterFuzzTests.cpp
Source/vst2-sdk/pluginterfaces/vst2.x/: aeffect.h
Source/vst2-sdk/public.sdk/source/vst2.x/: audioeffect.cpp  audioeffect.h  audioeffectx.cpp
Source/vst2-sdk/vstgui.sf/drawtest/mac/drawtest.xcodeproj/: project.pbxproj
Source/vst2-sdk/vstgui.sf/drawtest/source/: controlsgui.cpp  controlsgui.h  pdrawtesteditor.cpp  pdrawtesteditor.h  pdrawtesteffect.cpp  pdrawtestmain.cpp  pprimitivesviews.cpp
Source/vst2-sdk/vstgui.sf/vstgui/: Changelog  cfileselector.cpp  cfileselector.h  plugguieditor.cpp  plugguieditor.h  vstcontrols.cpp  vstcontrols.h  vstgui.cpp  vstgui.h
Source/vst2-sdk/vstgui.sf/vstgui/Documentation/: Migrating from 2.3.rtf
Source/vst2-sdk/vstgui.sf/vstgui/Documentation/html/: aeffguieditor_8cpp.html  aeffguieditor_8h.html  annotated.html  cfileselector_8cpp.html  cfileselector_8h.html  class_a_eff_g_u_i_editor-members.html  class_a_eff_g_u_i_editor.html  class_c_anim_knob-members.html  class_c_anim_knob.html  class_c_attribute_list_entry-members.html  class_c_attribute_list_entry.html  class_c_auto_animation-members.html  class_c_auto_animation.html  class_c_bitmap-members.html  class_c_bitmap.html  class_c_c_view-members.html  class_c_c_view.html  class_c_control-members.html  class_c_control.html  class_c_control_listener-members.html  class_c_control_listener.html  class_c_drag_container-members.html  class_c_drag_container.html  class_c_draw_context-members.html  class_c_draw_context.html  class_c_file_selector-members.html  class_c_file_selector.html  class_c_frame-members.html  class_c_frame.html  class_c_horizontal_slider-members.html  class_c_horizontal_slider.html  class_c_horizontal_switch-members.html  class_c_horizontal_switch.html  class_c_kick_button-members.html  class_c_kick_button.html  class_c_knob-members.html  class_c_knob.html  class_c_movie_bitmap-members.html  class_c_movie_bitmap.html  class_c_movie_button-members.html  (+194 more)
docs/: Adding pluginval to CI.md  Command line options.md  Debugging a failed validation.md  Testing plugins with pluginval.md
install/: build  bump_version_number  create_assets  install_macos_certificate  linux_build  mac_build  notarise  windows_build.bat
tests/: AddPluginvalTests.cmake  mac_tests  windows_tests.bat
tests/test_plugins/: AllocatingPluginDemo.h
tests/test_plugins/AllocatingPluginDemo/: AllocatingPluginDemo.jucer
tests/test_plugins/AllocatingPluginDemo/Source/: AllocatingPluginDemo.h  Main.cpp
